# formula

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  docker-compose.yml  fastrender_fix.patch  fastrender_snapshot_ci_green.patch  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  research-1.md  rust-toolchain.toml  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.setup.ts  y-leveldb-0.1.2.tgz
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
crates/formula-biff/: Cargo.toml
crates/formula-biff/src/: errors.rs  ftab.rs  function_ids.rs  lib.rs  ptg_list.rs  rgce.rs  structured_refs.rs
crates/formula-biff/tests/: arg_range_regressions.rs  decode_rgce_error_offsets.rs  ftab_future_udf.rs  legacy_structured_ref_placeholder.rs  ptg_array_decode.rs  ptg_err_unknown_decode.rs  ptg_func_decode.rs  ptg_funcvar_cube_rtd.rs  ptg_str_decode.rs  rgce_3d_error_refs_decode.rs  rgce_arrays.rs  rgce_biff12_extra_decode.rs  rgce_decode.rs  rgce_fuzz.rs  rgce_name_placeholders.rs  rgce_output_size_guard.rs  rgce_relative_refs_decode.rs  rgce_roundtrip.rs  rgce_structured_refs_decode.rs  rgce_structured_refs_payload_layouts.rs
crates/formula-columnar/: Cargo.toml
crates/formula-columnar/examples/: bench_columnar.rs  bench_mutable.rs  bench_query.rs  bench_refresh_compare.rs
crates/formula-columnar/src/: arrow.rs  bitmap.rs  bitpacking.rs  cache.rs  encoding.rs  lib.rs  parquet.rs  query.rs  stats.rs  table.rs  types.rs
crates/formula-columnar/tests/: append_column.rs  append_encoded_column.rs  arrow_interop_types.rs  arrow_parquet_roundtrip.rs  filter.rs  mutable_table.rs  query.rs
crates/formula-corpus-triage/: Cargo.toml
crates/formula-corpus-triage/src/: main.rs  ooxml_encryption.rs
crates/formula-corpus-triage/tests/: cli_empty_password.rs
crates/formula-dax/: Cargo.toml
crates/formula-dax/benches/: columnar_vs_vec.rs  pivot_scan_filtered.rs  pivot_star_schema.rs  relationship_propagation.rs
crates/formula-dax/src/: backend.rs  engine.rs  ident.rs  lib.rs  model.rs  parser.rs  pivot.rs  pivot_adapter.rs  pivot_config.rs  pivot_value.rs  value.rs
crates/formula-dax/tests/: all_column_semantics_tests.rs  blank_fk_does_not_match_physical_blank_dim_row_tests.rs  blank_member_columnar_dim_tests.rs  blank_row_bidirectional_visibility_tests.rs  blank_row_crossfilter_override_tests.rs  boolean_operator_tests.rs  bracket_identifier_escape_tests.rs  calculated_column_dependency_tests.rs  case_insensitive_identifiers_tests.rs  columnar_calculated_column_tests.rs  columnar_join_tests.rs  columnar_logical_types_tests.rs  columnar_numeric_filter_tests.rs  common.rs  concatenatex_tests.rs  containsrow_tests.rs  crossfilter_tests.rs  dax_engine_tests.rs  dax_function_golden_tests.rs  earlier_tests.rs  in_operator_tests.rs  insert_row_updates_blank_member_tests.rs  isinscope_tests.rs  lookupvalue_tests.rs  many_to_many_chain_propagation_tests.rs  many_to_many_columnar_tests.rs  many_to_many_duplicate_blank_dim_keys_tests.rs  many_to_many_integrity_tests.rs  many_to_many_keyset_semantics_tests.rs  many_to_many_pivot_tests.rs  many_to_many_regressions.rs  many_to_many_relationship_tests.rs  many_to_many_to_index_scaling_tests.rs  many_to_many_userelationship_tests.rs  number_literal_tests.rs  one_to_one_relationship_tests.rs  pivot_adapter_tests.rs  pivot_columnar_tests.rs  pivot_config_unicode_tests.rs  pivot_crosstab_tests.rs  (+8 more)
crates/formula-engine/: Cargo.toml
crates/formula-engine/benches/: engine.rs  pipeline.rs
crates/formula-engine/examples/: what_if_demo.rs
crates/formula-engine/src/: ast.rs  date.rs  display.rs  engine.rs  error.rs  external_refs.rs  lib.rs  metadata.rs  parallel.rs  parser.rs  perf.rs  pivot_registry.rs  style_bridge.rs  style_patch.rs  wasm_smoke.rs
crates/formula-engine/tests/: array_arithmetic.rs  array_function_args.rs  array_function_spill.rs  array_literals.rs  array_lookup_args.rs  ast_vs_bytecode_prop.rs  bytecode_coercion.rs  bytecode_compile_report_order.rs  bytecode_cross_sheet_refs.rs  bytecode_custom_sheet_dims.rs  bytecode_defined_names.rs  bytecode_dynamic_deps.rs  bytecode_eval_ast_lazy_special_forms.rs  bytecode_external_refs.rs  bytecode_lambda_lookup.rs  bytecode_large_sparse_range.rs  bytecode_lazy_special_forms.rs  bytecode_missing_argument_semantics.rs  bytecode_parser_errors.rs  bytecode_parser_lambda_call.rs  bytecode_reference_intersection.rs  bytecode_reference_union.rs  bytecode_rich_value_roundtrip.rs  bytecode_spill_backend.rs  bytecode_true_false_functions.rs  calc_settings.rs  canonical_eval.rs  cell_style_patches.rs  clear_contents_preserves_style.rs  countif_criteria.rs  coupon_schedule_oracle_regressions.rs  criteria_aggregates.rs  criteria_locale.rs  debug_trace.rs  debug_trace_field_access.rs  defined_names.rs  dependency_auditing.rs  discount_securities_coercion.rs  discount_securities_formulas.rs  discount_securities_text_bool_coercion.rs  (+135 more)
crates/formula-io/: Cargo.toml
crates/formula-io/examples/: generate_standard_rc4_ooxml_fixture.rs  roundtrip_large_xlsx.rs
crates/formula-io/src/: cryptoapi_rc4.rs  encrypted_ooxml.rs  encrypted_package.rs  encrypted_package_reader.rs  encryption_info.rs  lib.rs  ms_offcrypto.rs  rc4_cryptoapi.rs  rc4_encrypted_package.rs
crates/formula-io/tests/: agile_encryption_info.rs  atomic_save.rs  csv_io.rs  encrypted_xls.rs  (+58 more)
crates/formula-model/: Cargo.toml
crates/formula-offcrypto/: Cargo.toml
crates/formula-office-crypto/: Cargo.toml
crates/formula-storage/: Cargo.toml
crates/formula-vba/: Cargo.toml  build.rs
crates/formula-vba-oracle-cli/: Cargo.toml
crates/formula-vba-runtime/: Cargo.toml
crates/formula-wasm/: Cargo.toml  LICENSE
crates/formula-xls/: Cargo.toml
crates/formula-xlsb/: Cargo.toml
crates/formula-xlsx/: Cargo.toml
crates/xlsb-diff/: Cargo.toml
crates/xlsx-diff/: Cargo.toml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_eval_formula.rs  fuzz_parse_formula.rs
(+4875 files in other folders)
