[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/formula-biff",
  "crates/formula-columnar",
  "crates/formula-offcrypto",
  "crates/formula-dax",
  "crates/formula-corpus-triage",
  "crates/formula-engine",
  "crates/formula-excel-oracle",
  "crates/formula-fs",
  "crates/formula-format",
  "crates/formula-offcrypto",
  "crates/formula-io",
  "crates/formula-model",
  "crates/formula-office-crypto",
  "crates/formula-storage",
  "crates/formula-vba",
  "crates/formula-vba-oracle-cli",
  "crates/formula-vba-runtime",
  "crates/formula-xls",
  "crates/formula-xlsb",
  "crates/formula-xlsx",
  "crates/xlsb-diff",
  "crates/xlsx-diff",
  "crates/formula-wasm",
]
