[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/formula-biff",
  "crates/formula-columnar",
  "crates/formula-dax",
  "crates/formula-corpus-triage",
  "crates/formula-engine",
  "crates/formula-excel-oracle",
  "crates/formula-fs",
  "crates/formula-format",
  "crates/formula-offcrypto",
  "crates/formula-io",
  "crates/formula-model",
  "crates/formula-office-crypto",
  "crates/formula-storage",
  "crates/formula-vba",
  "crates/formula-vba-oracle-cli",
  "crates/formula-vba-runtime",
  "crates/formula-xls",
  "crates/formula-xlsb",
  "crates/formula-xlsx",
  "crates/xlsb-diff",
  "crates/xlsx-diff",
  "crates/formula-wasm",
  "crates/formula-offcrypto",
]

# Release build settings for shipped artifacts.
#
# These defaults are tuned to help keep desktop bundles/installer artifacts under
# the 50 MB budget by avoiding accidental debug/symbol data in release binaries.
[profile.release]
# Strip symbol/debug info from release binaries.
strip = "symbols"
# Enable ThinLTO to reduce binary size (often improves runtime perf as well).
lto = "thin"
# Fewer codegen units improves LTO effectiveness and can shrink binaries.
codegen-units = 1
