[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/formula-ascii",
  "crates/formula-biff",
  "crates/formula-columnar",
  "crates/formula-dax",
  "crates/formula-corpus-triage",
  "crates/formula-engine",
  "crates/formula-excel-oracle",
  "crates/formula-offcrypto",
  "crates/formula-fs",
  "crates/formula-format",
  "crates/formula-office-crypto",
  "crates/formula-io",
  "crates/formula-model",
  "crates/formula-storage",
  "crates/formula-vba",
  "crates/formula-vba-oracle-cli",
  "crates/formula-vba-runtime",
  "crates/formula-xls",
  "crates/formula-xlsb",
  "crates/formula-xlsx",
  "crates/xlsb-diff",
  "crates/xlsx-diff",
  "crates/formula-wasm",
]
exclude = [
  # `cargo-fuzz` harnesses live here; they require nightly and should not be built as part of the
  # regular workspace (including CI).
  "fuzz",
]

# Release build settings for shipped artifacts.
#
# These defaults are tuned to help keep desktop bundles/installer artifacts under
# the 50 MB budget by avoiding accidental debug/symbol data in release binaries.
# See `docs/11-desktop-shell.md` ("Bundle size tuning") for the rationale/tradeoffs.
[profile.release]
# Strip symbol/debug info from release binaries.
strip = "symbols"
# Enable ThinLTO to reduce binary size (often improves runtime perf as well).
lto = "thin"
# Fewer codegen units improves LTO effectiveness and can shrink binaries.
codegen-units = 1

# NOTE: Cargo only reads `[profile.*]` settings from the *workspace* `Cargo.toml`
# (this file), so desktop-specific release settings also live here.

[profile.release.package.formula-desktop-tauri]
# Prefer a smaller desktop host binary; hot-path compute lives in `formula-engine`
# which remains at Cargo's default `opt-level=3`.
opt-level = "z"

# Debugging helper:
#
# Release stripping/LTO makes stack traces and profiling harder. Use this profile when you need a
# more debuggable optimized desktop build:
#
#   cargo build --profile release-desktop-debug -p formula-desktop-tauri --bin formula-desktop --features desktop

[profile.release-desktop-debug]
inherits = "release"
debug = 1
strip = false
# Keep debug builds reasonably fast to compile.
lto = false
codegen-units = 16

[profile.release-desktop-debug.package.formula-desktop-tauri]
# Use regular perf-oriented optimizations for the desktop shell when debugging.
opt-level = 3
