[package]
name = "formula-corpus-triage"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
aes = "0.8"
base64 = "0.22"
cfb = "0.10"
clap = { version = "4.5", features = ["derive"] }
formula-engine = { path = "../formula-engine" }
formula-model = { path = "../formula-model" }
formula-xlsb = { path = "../formula-xlsb" }
formula-xlsx = { path = "../formula-xlsx" }
globset = "0.4"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
zip = { version = "2.1", default-features = false }
xlsx-diff = { path = "../xlsx-diff" }

[dev-dependencies]
zip = { version = "2.1", default-features = false, features = ["deflate"] }
tempfile = "3.10"
