[package]
name = "formula-dax"
version = "0.1.0"
edition = "2021"

[features]
# Enable lightweight conversions into `formula-model` pivot scalar values without forcing all
# `formula-dax` users to pull in the (larger) workbook model crate.
pivot-model = ["dep:formula-model"]

[dependencies]
log = "0.4"
ordered-float = "4.2.0"
thiserror = "2"
formula-columnar = { path = "../formula-columnar" }
formula-model = { path = "../formula-model", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
criterion = "0.5"

[[bench]]
name = "columnar_vs_vec"
harness = false

[[bench]]
name = "pivot_star_schema"
harness = false

[[bench]]
name = "relationship_propagation"
harness = false

[[bench]]
name = "pivot_scan_filtered"
harness = false
