[package]
name = "formula-io"
version = "0.1.0"
edition = "2021"

[features]
default = ["encrypted-workbooks"]
# Keep Parquet support behind a feature so `formula-io` stays lightweight by default.
parquet = ["dep:formula-columnar"]
# Enable `formula-xlsx`'s optional VBA helpers (`formula-vba` + OpenSSL).
#
# This is kept opt-in because it adds a significant dependency surface and build
# time (vendored OpenSSL in some environments).
vba = ["formula-xlsx/vba"]
# Enable password-based decryption for encrypted workbooks (OOXML + legacy XLS).
#
# This is currently used to gate integration tests while decryption support is landing.
encrypted-workbooks = ["dep:formula-office-crypto"]
# MS-OFFCRYPTO parsing/verifier helpers and fuzz tests.
#
# Keep this separate from the main decryption feature so we can run hardening tests without
# necessarily enabling end-to-end encrypted workbook fixtures.
offcrypto = []

[dependencies]
aes = "0.8"
base64 = "0.22"
cfb = "0.10"
encoding_rs = "0.8"
# MS-OFFCRYPTO Standard (CryptoAPI) uses MD5 in its password verifier/KDF.
# Keep the dependency name `md5` for compatibility with existing call sites.
# (Avoid adding a separate `md-5 = ...` entry; use this renamed dep to prevent duplication.)
md5 = { package = "md-5", version = "0.10" }
formula-columnar = { path = "../formula-columnar", optional = true, features = ["arrow"] }
formula-fs = { path = "../formula-fs" }
formula-format = { path = "../formula-format" }
formula-model = { path = "../formula-model" }
formula-offcrypto = { path = "../formula-offcrypto" }
formula-office-crypto = { path = "../formula-office-crypto", optional = true }
# Disable `formula-xlsx` default features so `formula-io` stays lightweight by
# default. Consumers that need `formula_xlsx::vba` can opt in via the
# `formula-io/vba` feature.
formula-xlsx = { path = "../formula-xlsx", default-features = false }
formula-xls = { path = "../formula-xls" }
formula-xlsb = { path = "../formula-xlsb" }
roxmltree = "0.20"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "1.0"
zip = { version = "2.1", default-features = false }
zeroize = "1.8"

[dev-dependencies]
cbc = "0.1"
proptest = "1"
formula-office-crypto = { path = "../formula-office-crypto" }
xlsx-diff = { path = "../xlsx-diff" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
ms-offcrypto-writer = "1.0.7"
rand = "0.9"

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }
