[package]
name = "formula-io"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Keep Parquet support behind a feature so `formula-io` stays lightweight by default.
parquet = ["dep:formula-columnar"]
# Enable `formula-xlsx`'s optional VBA helpers (`formula-vba` + OpenSSL).
#
# This is kept opt-in because it adds a significant dependency surface and build
# time (vendored OpenSSL in some environments).
vba = ["formula-xlsx/vba"]
# Enable password-based decryption for encrypted workbooks (OOXML + legacy XLS).
#
# This is currently used to gate integration tests while decryption support is landing.
encrypted-workbooks = []

[dependencies]
base64 = "0.22"
cfb = "0.10"
encoding_rs = "0.8"
formula-columnar = { path = "../formula-columnar", optional = true, features = ["arrow"] }
formula-fs = { path = "../formula-fs" }
formula-format = { path = "../formula-format" }
formula-model = { path = "../formula-model" }
formula-offcrypto = { path = "../formula-offcrypto" }
# Disable `formula-xlsx` default features so `formula-io` stays lightweight by
# default. Consumers that need `formula_xlsx::vba` can opt in via the
# `formula-io/vba` feature.
formula-xlsx = { path = "../formula-xlsx", default-features = false }
formula-xls = { path = "../formula-xls" }
formula-xlsb = { path = "../formula-xlsb" }
roxmltree = "0.20"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "1.0"
sha1 = "0.10"
md-5 = "0.10"
zip = { version = "2.1", default-features = false }

[dev-dependencies]
aes = "0.8"
cbc = "0.1"
xlsx-diff = { path = "../xlsx-diff" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
ms-offcrypto-writer = "1.0.7"
rand = "0.9"
