[package]
name = "formula-model"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core in-memory data model for Formula spreadsheets (workbooks/sheets/cells/styles)."

[dependencies]
formula-columnar = { path = "../formula-columnar" }
csv = "1.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
formula-format = { path = "../formula-format" }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
ordered-float = "4"
uuid = { version = "1", features = ["v4"] }
unicode-normalization = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# `uuid` requires an explicit RNG backend on `wasm32-unknown-unknown`.
uuid = { version = "1", features = ["rng-getrandom"] }
# `uuid` + other deps pull `getrandom` which needs opting into a WASM backend.
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
serde_json = "1.0"
