[package]
name = "formula-offcrypto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Microsoft Office encryption (MS-OFFCRYPTO) helpers for Formula."

[dependencies]
aes = "0.8"
base64 = "0.22"
cbc = "0.1"
cipher = { version = "0.4", features = ["block-padding"] }
cfb = "0.10"
office-crypto = "0.2"
quick-xml = "0.37"
sha1 = "0.10"
sha2 = "0.10"
subtle = "2.6"
zeroize = "1.8"

[dev-dependencies]
cfb = "0.10"
hex = "0.4"
