[package]
name = "formula-offcrypto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure-Rust OOXML (MS-OFFCRYPTO) EncryptedPackage decryption."

[dependencies]
aes = "0.8"
base64 = "0.22"
cbc = "0.1"
cipher = { version = "0.4", features = ["block-padding"] }
cfb = "0.10"
hmac = "0.12"
md-5 = "0.10"
quick-xml = "0.37"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "1"
subtle = "2.6"
zeroize = "1.8"

[dev-dependencies]
hex = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
ms-offcrypto-writer = "1.0.7"
proptest = "1.4"
rand = "0.9"
