[package]
name = "formula-office-crypto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aes = "0.8"
base64 = "0.22"
cbc = "0.1"
cfb = "0.10"
cipher = "0.4"
md-5 = "0.10"
rc4 = "0.1"
hmac = "0.12"
quick-xml = { version = "0.31", default-features = false }
rand = "0.8"
sha1 = "0.10"
sha2 = "0.10"
subtle = "2.6"
thiserror = "1.0"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# `rand` (used for the test/encryption helpers) pulls in `getrandom`, which requires the `js`
# feature on `wasm32-unknown-unknown`.
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
ms-offcrypto-writer = "1.0.7"
rand09 = { package = "rand", version = "0.9" }
proptest = "1"
# Tests inspect decrypted OOXML packages via `zip::ZipArchive`; enable deflate so we can read
# typical XLSX parts (Excel uses DEFLATE compression for most entries).
zip = { version = "2.1", default-features = false, features = ["deflate"] }
