[package]
name = "formula-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
lru = "0.12"
formula-model = { path = "../formula-model" }
unicode-normalization = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
tempfile = "3"
