[package]
name = "formula-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "serde_json", "serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
lru = "0.12"
formula-model = { path = "../formula-model" }
formula-dax = { path = "../formula-dax" }
formula-columnar = { path = "../formula-columnar" }
unicode-normalization = "0.1"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
tempfile = "3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
