[package]
name = "formula-vba-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
formula-model = { path = "../formula-model" }

[dev-dependencies]
pretty_assertions = "1.4"
formula-vba = { path = "../formula-vba" }
formula-xlsx = { path = "../formula-xlsx" }
