[package]
name = "formula-vba"
version = "0.1.0"
edition = "2021"

[dependencies]
cfb = "0.10"
encoding_rs = "0.8"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "1"
x509-parser = "0.17"

[target.'cfg(all(not(target_arch = "wasm32"), windows))'.dependencies]
# Use a vendored OpenSSL build on Windows/macOS to avoid requiring developers/CI to have
# OpenSSL installed system-wide.
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(all(not(target_arch = "wasm32"), target_os = "macos"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(any(windows, target_os = "macos"))))'.dependencies]
# Prefer linking against the system OpenSSL on Linux/other Unix targets.
#
# Vendored OpenSSL builds are expensive and can be flaky under constrained CI/multi-agent
# environments (e.g. when process/thread creation is limited). We keep the Windows/macOS vendored
# builds above, but use the system library elsewhere.
#
# If you don't have OpenSSL headers installed, install your distro's
# `libssl-dev`/`openssl-devel` package.
openssl = "0.10"

[dev-dependencies]
zip = { version = "2.1", default-features = false, features = ["deflate"] }
office-crypto = "0.2"
