[package]
name = "formula-wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "WASM bindings for the Formula spreadsheet engine."
repository = "https://github.com/wilson-anysphere/formula"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["dax"]
# Optional bindings for `formula-dax` (Power Pivot / pivot table engine).
dax = ["dep:formula-dax"]

[dependencies]
formula-engine = { path = "../formula-engine" }
formula-model = { path = "../formula-model" }
formula-xlsx = { path = "../formula-xlsx" }
formula-dax = { path = "../formula-dax", optional = true }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
# wasm-pack runs wasm-opt in release mode. Newer Rust toolchains emit bulk memory
# operations (e.g. `memory.copy`) and non-trapping float-to-int conversions
# (e.g. `i32.trunc_sat_*`) which require enabling the corresponding wasm-opt
# feature flags during validation/optimization.
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
