[package]
name = "formula-wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "WASM bindings for the Formula spreadsheet engine."
repository = "https://github.com/wilson-anysphere/formula"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["dax"]
# Optional bindings for `formula-dax` (Power Pivot / pivot table engine).
dax = ["dep:formula-dax"]

[dependencies]
formula-engine = { path = "../formula-engine" }
formula-model = { path = "../formula-model" }
formula-xlsx = { path = "../formula-xlsx" }
formula-dax = { path = "../formula-dax", optional = true }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
# wasm-pack runs wasm-opt (Binaryen) in release builds. Our generated WASM uses
# post-MVP instructions (e.g. bulk memory ops / saturating float-to-int) that
# require feature flags in older wasm-opt versions. Enable all features so the
# optimizer can validate and process the module across environments.
wasm-opt = ["-O", "--all-features"]
