[package]
name = "formula-wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "WASM bindings for the Formula spreadsheet engine."
repository = "https://github.com/wilson-anysphere/formula"
publish = false

[package.metadata.wasm-pack.profile.release]
# wasm-pack runs `wasm-opt` in release builds. The Binaryen version bundled with
# wasm-pack requires explicit feature flags for newer wasm instructions emitted
# by recent Rust toolchains (bulk memory ops, saturating float-to-int, etc).
# Enabling all features keeps the optimizer compatible without disabling it.
wasm-opt = ["-O", "--all-features"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["dax"]
# Optional bindings for `formula-dax` (Power Pivot / pivot table engine).
dax = ["dep:formula-dax"]
# Optional VBA parsing/signature helpers via `formula-xlsx`'s `vba` feature.
xlsx-vba = ["formula-xlsx/vba"]

[dependencies]
formula-engine = { path = "../formula-engine" }
formula-model = { path = "../formula-model" }
formula-office-crypto = { path = "../formula-office-crypto" }
formula-xlsb = { path = "../formula-xlsb" }
formula-xlsx = { path = "../formula-xlsx", default-features = false }
formula-dax = { path = "../formula-dax", optional = true, features = ["pivot-model"] }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
wasm-bindgen = "0.2"
zip = { version = "2.1", default-features = false, features = ["deflate"] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
formula-format = { path = "../formula-format" }
wasm-bindgen-test = "0.3"
