[package]
name = "formula-xls"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = "0.32"
cfb = "0.10"
encoding_rs = "0.8"
formula-format = { path = "../formula-format" }
formula-biff = { path = "../formula-biff", default-features = false }
formula-model = { path = "../formula-model" }
formula-office-crypto = { path = "../formula-office-crypto" }
log = "0.4"
md-5 = "0.10"
sha1 = "0.10"
subtle = "2.6"
thiserror = "2.0"
zeroize = "1.8"

[dev-dependencies]
formula-engine = { path = "../formula-engine", default-features = false }
proptest = "1"
tempfile = "3.10"

[[bin]]
name = "xls-formula-diag"
path = "src/bin/xls_formula_diag.rs"
