[package]
name = "formula-xlsb"
version = "0.1.0"
edition = "2021"

[features]
# Keep the default reader minimal; enabling `write` pulls in the formula parser
# (via `formula-engine`) so worksheet patchers can emit BIFF12 formulas.
write = ["formula-biff/encode"]

[dependencies]
formula-model = { path = "../formula-model" }
quick-xml = "0.31"
thiserror = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
formula-biff = { path = "../formula-biff", default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
calamine = "0.26"
formula-biff = { path = "../formula-biff" }
formula-engine = { path = "../formula-engine" }
pretty_assertions = "1.4"
proptest = "1"
tempfile = "3.10"
xlsx-diff = { path = "../xlsx-diff" }
