[package]
name = "formula-xlsb"
version = "0.1.0"
edition = "2021"

[features]
# Keep the default reader minimal; enabling `write` pulls in the formula parser
# (via `formula-engine`) so worksheet patchers can emit BIFF12 formulas.
write = ["formula-biff/encode", "dep:formula-engine"]

[dependencies]
aes = "0.8"
cbc = "0.1"
cfb = "0.10"
formula-format = { path = "../formula-format" }
formula-fs = { path = "../formula-fs" }
formula-model = { path = "../formula-model" }
formula-offcrypto = { path = "../formula-offcrypto" }
quick-xml = "0.31"
sha1 = "0.10"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
unicode-normalization = "0.1"
zip = { version = "2.1", default-features = false, features = ["deflate"] }
formula-biff = { path = "../formula-biff", default-features = false }
formula-engine = { path = "../formula-engine", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
calamine = "0.26"
formula-biff = { path = "../formula-biff" }
formula-engine = { path = "../formula-engine" }
formula-format = { path = "../formula-format" }
pretty_assertions = "1.4"
proptest = "1"
tempfile = "3.10"
xlsx-diff = { path = "../xlsx-diff" }
