[package]
name = "formula-xlsb"
version = "0.1.0"
edition = "2021"

[features]
# Keep the default reader minimal; enabling `write` pulls in the formula parser
# (via `formula-engine`) so worksheet patchers can emit BIFF12 formulas.
write = ["formula-biff/encode", "dep:formula-engine"]

[dependencies]
formula-format = { path = "../formula-format" }
formula-model = { path = "../formula-model" }
formula-office-crypto = { path = "../formula-office-crypto" }
quick-xml = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
unicode-normalization = "0.1"
zip = { version = "2.1", default-features = false, features = ["deflate"] }
formula-biff = { path = "../formula-biff", default-features = false }
formula-engine = { path = "../formula-engine", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
formula-fs = { path = "../formula-fs" }

[dev-dependencies]
cfb = "0.10"
assert_cmd = "2.0"
calamine = "0.26"
formula-biff = { path = "../formula-biff" }
formula-engine = { path = "../formula-engine" }
formula-format = { path = "../formula-format" }
pretty_assertions = "1.4"
proptest = "1"
tempfile = "3.10"
xlsx-diff = { path = "../xlsx-diff" }
