[package]
name = "formula-xlsx"
version = "0.1.0"
edition = "2021"

[dependencies]
formula-model = { path = "../formula-model" }
formula-vba = { path = "../formula-vba" }
quick-xml = "0.37"
thiserror = "1"
zip = { version = "2.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
cfb = "0.10"
pretty_assertions = "1"
tempfile = "3.10"
