[package]
name = "formula-xlsx"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "XLSX/XLSM import/export and package preservation utilities for Formula."

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
formula-engine = { path = "../formula-engine" }
formula-format = { path = "../formula-format" }
formula-model = { path = "../formula-model" }
formula-vba = { path = "../formula-vba" }
quick-xml = { version = "0.37", features = ["serialize"] }
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
zip = { version = "2.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
base64 = "0.22"
cfb = "0.10"
pretty_assertions = "1"
insta = "1.46"
rust_xlsxwriter = "0.64"
formula-engine = { path = "../formula-engine" }
tempfile = "3.10"
xlsx-diff = { path = "../xlsx-diff" }
