[package]
name = "formula-xlsx"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "XLSX/XLSM import/export and package preservation utilities for Formula."

[features]
# `formula-xlsx` can optionally include VBA parsing/signature helpers via `formula-vba`.
#
# This is enabled by default so existing users continue to have access to the
# `formula_xlsx::vba` API surface without having to opt in explicitly.
default = ["vba"]
vba = ["dep:formula-vba"]

[dependencies]
aes = "0.8"
base64 = "0.22"
cbc = "0.1"
cfb = "0.10"
cipher = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std"] }
digest = "0.10"
hmac = "0.12"
formula-engine = { path = "../formula-engine" }
formula-format = { path = "../formula-format" }
formula-columnar = { path = "../formula-columnar" }
formula-model = { path = "../formula-model" }
formula-offcrypto = { path = "../formula-offcrypto" }
formula-vba = { path = "../formula-vba", optional = true }
quick-xml = { version = "0.37", features = ["serialize"] }
rc4 = "0.1"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "1"
zip = { version = "2.1", default-features = false, features = ["deflate"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
formula-fs = { path = "../formula-fs" }
tempfile = "3.10"
formula-office-crypto = { path = "../formula-office-crypto" }

[dev-dependencies]
ms-offcrypto-writer = "1.0.7"
md-5 = "0.10"
office-crypto = "0.2.0"
openssl = "0.10"
proptest = "1.4"
pretty_assertions = "1"
insta = "1.46"
rand = "0.9"
rust_xlsxwriter = "0.70"
formula-engine = { path = "../formula-engine" }
xlsx-diff = { path = "../xlsx-diff" }

[target.'cfg(all(not(target_arch = "wasm32"), windows))'.dev-dependencies]
# Match `formula-vba`'s OpenSSL setup so developers/CI don't need a system-wide OpenSSL install.
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(all(not(target_arch = "wasm32"), target_os = "macos"))'.dev-dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(any(windows, target_os = "macos"))))'.dev-dependencies]
openssl = "0.10"
