[package]
name = "xlsb-diff"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
roxmltree = "0.20"
walkdir = "2.5"
xlsx-diff = { path = "../xlsx-diff" }
zip = { version = "2.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
formula-xlsb = { path = "../formula-xlsb" }
pretty_assertions = "1.4"
tempfile = "3.10"
